Quiz app navigation from splash

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/diceimages/dice-4.png
     - assets/diceimages/dice-5.png
     - assets/diceimages/dice-6.png
+    - assets/applogo/quiz-logo.png
 
 
 
